DONE section 1 : list and anchor tag

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <main>
         <section id="list_a_tags">
             <ul type="square">
-               <li><a href="www.google.com" target="_blank">visit Google</a></li>
-               <li><a href="www.amazon.com" target="_blank">visit Amazon</a></li>
+               <li><a href="https://www.google.com" target="_blank">visit Google</a></li>
+               <li><a href="https://www.amazon.com" target="_blank">visit Amazon</a></li>
             </ul>
-            <dl>
+            <dl type = "square">
                 <dt>iFrame</dt>
                 <dd>to insert another website into your website</dd>
                 <dt>meta</dt>
