DONE section 2 : form and table

--- a/index.html
+++ b/index.html
@@ -14,12 +14,72 @@
                <li><a href="https://www.google.com" target="_blank">visit Google</a></li>
                <li><a href="https://www.amazon.com" target="_blank">visit Amazon</a></li>
             </ul>
-            <dl type = "square">
+        <hr/>
+            <dl>
                 <dt>iFrame</dt>
                 <dd>to insert another website into your website</dd>
                 <dt>meta</dt>
                 <dd>provides info about the webpage</dd>
             </dl>
+        </section>
+        <hr/>
+        <section id="table_form">
+            <table border="1px" cellpadding="8px" style="text-align: center;">
+                <thead>
+                    <caption>Frontend Languages</caption>
+                    <tr>
+                        <td>Language</td>
+                        <td>Purpose</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>HTML5</td>
+                        <td>concerned with what will be displayed</td>
+                    </tr>
+                    <tr>
+                        <td>CSS3</td>
+                        <td>concerned with styling of content on webpage</td>
+                    </tr>
+                    <tr>
+                        <td>javaScript</td>
+                        <td>concerned with adding functionality to a webpage</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">I will become an sterling asset of IT industry one day</td>
+                    </tr>
+                </tbody>
+            </table>
+            <hr/>
+            <fieldset>
+                <legend>A BASIC FORM</legend>
+                <form action="">
+                    <input type="date"><br/>
+                    <input type="range"><br/>
+                    <input type="file"><br/>
+                    <textarea name="" id="" cols="30" rows="10">enter some text</textarea><br/>
+                    <select>
+                        <option value="">option 1</option>
+                        <option>option 2</option>
+                        <option>option 3</option>
+                    </select><br/>
+
+                    <label for="male">male</label>
+                    <input id ="male" type="radio" value="male" name="radio_btn">
+                    <label for="female">female</label>
+                    <input id="female" type="radio" value= female name= "radio_btn">
+                    <br/>
+
+                    <label for="opt1">option 1</label>
+                    <input id="opt1" type="checkbox" value="option1">
+                    <label for="opt2">option 2</label>
+                    <input id="opt2" type="checkbox" value="option2">
+                    <label for="opt3">option 3</label>
+                    <input id="opt3" type="checkbox" value="option3">
+                    <br/>
+                </form>
+            </fieldset>
+            <hr/>
         </section>
     </main>
 </body>
