--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- ISSUES -->
+<!-- issue one : RESOLVED need to add a type field : video tag in section img_vid_iframe is not working -->
 <!DOCTYPE html>
 <head>
    <title>HTML5</title>
@@ -79,6 +81,21 @@
                     <br/>
                 </form>
             </fieldset>
+            <hr/>
+        </section>
+        <section id="img_vid_iframe">
+            <img width="200px" src="./images/robotics.jpg" alt="robot as doctor" width="200px">
+            <hr/>
+            <video  width="560" height="315" controls poster="./images/marriage_thumbnail.png">
+                <source src="D:/Bhaiya marriage/jkStudio/001.mp4" type="video/mp4">
+            </video>
+            <hr/>
+            <!-- way 2 to code video tag -->
+            <!-- <video width="560" height="315" controls src="D:/Bhaiya marriage/jkStudio/001.mp4" type="video/mp4" poster="./images/marriage_thumbnail.png">video not supported</video>
+            <hr/> -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KUM4AECEcUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <hr/>
+            <iframe width="560" height="315"  src="https://www.thapatechnical.com/" frameborder="0"></iframe>
             <hr/>
         </section>
     </main>
