README.md file has been added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- ISSUES -->
 <!-- issue one : RESOLVED need to add a type field : video tag in section img_vid_iframe is not working -->
 <!DOCTYPE html>
+<html>
 <head>
    <title>HTML5</title>
    <meta charset="UTF-8">
@@ -100,3 +101,4 @@
         </section>
     </main>
 </body>
+</html>
